# nonone

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  publish_to_pypi.yml  test_and_publish.yml
examples/: 01_painpoint1_error_handling.py  02_painpoint2_exception_handling.py  03_painpoint3_nested_none.py  04_quick_start.py  05_advanced_pattern_matching.py
exmaples/: 01_file_io.py  02_data_pipeline.py  03_logging_and_expect.py
src/nonone/: __init__.py  result.py
tests/: test_result.py
