[project]
name = "nonone"
version = "0.1.4"
description = "A modern, lightweight Rust-style Result type for Python 3.10+ pattern matching."
readme = "README.md"
authors = [
    { name = "DBinK", email = "DBinKv1@Gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/DBinK/nonone"
Repository = "https://github.com/DBinK/nonone"
Issues = "https://github.com/DBinK/nonone/issues"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]